--- a/atv12.html
+++ b/atv12.html
@@ -22,13 +22,13 @@
         }
         .right-panel {
             flex: 1;
-            background-color: #ffee00;
+            background-color: #ffffff;
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
             margin: 10px;
         }
         h1 {
-            color: #ffee00;
+            color: #000000;
         }
         h2 {
             color: #000000;
@@ -36,7 +36,7 @@
         button {
             border-radius: 4px;
             color: #000000;
-            background-color: #ffee00d7;
+            background-color: #ffffffd7;
         }
         label {
             font-weight: bold;
@@ -52,7 +52,7 @@
             margin-bottom: 10px;
         }
         .navbar {
-            background-color: #ffee00d7;
+            background-color: #ffffffd7;
             color: #000000;
             padding: 10px;
             margin: 10px;
@@ -62,7 +62,7 @@
             top: 0;
         }
         .footer {
-            background-color: #ffee00d7;
+            background-color: #ffffffd7;
             color: #000000;
             padding: 10px;
             text-align: center;
@@ -72,7 +72,7 @@
 
         }
         label {
-            color: #ffee00;
+            color: #ffffff;
         }
     </style>        
     <title>Gerenciador de Contas Bancárias</title>
